2006-11-17  Per Bothner  <per@bothner.com>

	* Nodes.java: Update writeChar -> append.

	* Nodes.java: Minor changes to increase (potential) flexibility.
	(handleNonNode): New method.

	* MakeText.java (apply1): Use text$C method for stringization since
	StringValue.stringValue doesn't handle multiple values right.
	(compile): New method to prevent bad inlining.

2006-11-16  Per Bothner  <per@bothner.com>

	* NodeType.java (compare): New method.

2006-11-15  Per Bothner  <per@bothner.com>

	* CommentConstructor.java (apply): Insert spaces between values of
	multiple values, not just multiple arguments.

2006-11-14  Per Bothner  <per@bothner.com>

	* MakeProcInst.java (procInst$C): Remove now-redundant testing.

	* XMLParser.java: Make use of enhanced XMLFilter.
	(messages): Remove field.
	(filter): New field.
	(error): Defer error reporting to XMLFilter.
	(getColumnNumber): Subtract one to get just-read column.
	* MakeElement.java: Namespaces copying is now handled by XMLFilter.
	* Nodes.java: Must now filter XConsumer events using XMLFilter.
	* NodeConstructor.java (pushNodeConsumer, popNodeConsumer,
	pushNodeContext, popNodeContext, compileUsingNodeTree): Likewise.
	(makeName, finishNode): Convenience methods for compiled code.

	* SortedNodes.java (curFragment): Remove unused/bogus field.

2006-11-13  Per Bothner  <per@bothner.com>

	* XMLParser.java: Implement gnu.text.SourceLocation.

	* AttributeType.java (getImplementationType): Be more specific.
	* ElementType.java (getImplementationType): Likewise.
	* ProcessingInstructionType.java (getImplementationType): Likewise.

2006-11-09  Per Bothner  <per@bothner.com>

	* MakeAttribute.java: Update for Consumer changes.
	* MakeResponseHeader.java: Likewise.
	* HttpPrinter.java: Likewise.
	* MakeElement.java: Likewise.
	* Nodes.java: Likewise.

2006-11-08  Per Bothner  <per@bothner.com>

	* XMLParser.java: Update for ParsedXMLToConsumer -> XMLFilter rename.

2006-10-31  Per Bothner  <per@bothner.com>
