@@ -1,3 +1,8 @@
+2006-11-18  Per Bothner  <per@bothner.com>
+
+	* NodeTree.java (baseUriOfPos): Remove throws clause.
+	Catch and wrap URISyntaxException.
+
 2006-11-17  Per Bothner  <per@bothner.com>
 
 	* XMLPrinter.java (savedHighSurrogate): New field,
